# translateR

./: .coveragerc  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  ai_logger.py  ai_providers.py  app_store_client.py  config.py  inspect_version_locales.py  main.py  pyproject.toml  release_presets.py  requirements.txt  translateR  ui.py  utils.py
.claude/: napkin.md
config/: .gitkeep
presets/: fresh_features.json  minor_bug_fixes.json
tests/: app_events_test_helpers.py  conftest.py  test_ai_logger.py  test_ai_providers.py  test_ai_providers_extended.py  test_ai_providers_more.py  test_app_events_helpers.py  test_app_events_more_branches.py  test_app_events_run_branches.py  test_app_info_copy_branches.py  test_app_info_more_branches.py  test_app_store_client.py  test_app_store_client_advanced.py  test_app_store_client_branches_more.py  test_app_store_client_game_center.py  test_app_store_client_more.py  test_config.py  test_config_more.py  test_copy_export_more_branches.py  test_copy_helpers.py  test_copy_run_more.py  test_full_setup_more.py  test_game_center_helpers.py  test_game_center_helpers_more.py  test_game_center_image_helpers.py  test_game_center_run.py  test_game_center_run_more.py  test_game_center_run_variants.py  test_iap_more_branches.py  test_iap_run_branches.py  test_inspect_version_locales.py  test_main.py  test_main_extended.py  test_main_more_branches.py  test_main_setup.py  test_main_wizard.py  test_manage_presets.py  test_manage_presets_extended.py  test_manage_presets_more_branches.py  test_manage_presets_run_flow.py  (+25 more)
workflows/: copy.py  (+15 more)
(+8 files in other folders)
