[project]
name = "translater"
version = "0.1.0"
description = "AI-powered App Store Connect localization automation tool."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "cryptography>=44.0.0",
    "inquirerpy>=0.3.4",
    "pyjwt>=2.10.0",
    "requests>=2.32.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
